fix: update Spanish CV language selection text for clarity

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -5,7 +5,7 @@
     "greeting": "HOLA, SOY",
     "description": "Soy un desarrollador full stack con sede en Brasil. Me apasiona crear y desarrollar aplicaciones web. También soy un entusiasta de la ciberseguridad.",
     "download_cv": "Descargar CV",
-    "select_cv_language": "Seleccionar idioma del CV",
+    "select_cv_language": "Seleccionar idioma",
     "brazilian_portuguese": "Portugués Brasileño",
     "english": "Inglés"
   },
