fix: simplify CV language selection text for clarity

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,7 +5,7 @@
     "greeting": "HEY, I'M",
     "description": "I'm a full stack developer based in Brazil. I have a passion for creating and developing web applications. I'm also a cybersecurity enthusiast.",
     "download_cv": "Download CV",
-    "select_cv_language": "Select CV language",
+    "select_cv_language": "Select language",
     "brazilian_portuguese": "Brazilian Portuguese",
     "english": "English"
   },
