fix: update icon SVG and correct name in localization files

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -65,7 +65,7 @@
   "contact": {
     "title": "Sobre",
     "title_2": " Mí",
-    "description": "Hola, soy Paulo Macedo, estudiante de Ciencias de la Computación en CEFET-RJ, me graduaré en 2026. Me apasiona la ciberseguridad, el desarrollo de software y los sistemas Linux.<br><br>Tengo experiencia práctica con tecnologías inmersivas, scripting para entornos Linux y desarrollo de soluciones seguras y escalables. Mi conjunto de habilidades incluye Python, Rust, C++, JavaScript y herramientas como Unity, Git y VMware.<br><br>Actualmente, estoy enfocado en avanzar mi conocimiento en seguridad de la información y construir proyectos impactantes.",
+    "description": "Hola, soy Paule Macedo, estudiante de Ciencias de la Computación en CEFET-RJ, me graduaré en 2026. Me apasiona la ciberseguridad, el desarrollo de software y los sistemas Linux.<br><br>Tengo experiencia práctica con tecnologías inmersivas, scripting para entornos Linux y desarrollo de soluciones seguras y escalables. Mi conjunto de habilidades incluye Python, Rust, C++, JavaScript y herramientas como Unity, Git y VMware.<br><br>Actualmente, estoy enfocado en avanzar mi conocimiento en seguridad de la información y construir proyectos impactantes.",
     "projects": "Proyectos",
     "years_of_experience": "años de experiencia",
     "contact_message": "Estoy abierto a nuevas oportunidades y colaboraciones, ¡así que no dudes en contactarme!",
