--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -65,7 +65,7 @@
   "contact": {
     "title": "Sobre",
     "title_2": " Mim",
-    "description": "Olá, eu sou Paulo Macedo, estudante de Ciência da Computação no CEFET-RJ, com graduação prevista para 2026. Sou apaixonado por cibersegurança, desenvolvimento de software e sistemas Linux.<br><br>Tenho experiência prática com tecnologias imersivas, scripts para ambientes Linux e desenvolvimento de soluções seguras e escaláveis. Meu conjunto de habilidades inclui Python, Rust, C++, JavaScript e ferramentas como Unity, Git e VMware.<br><br>Atualmente, estou focado em avançar meu conhecimento em segurança da informação e construir projetos impactantes.",
+    "description": "Olá, eu sou Paule Macedo, estudante de Ciência da Computação no CEFET-RJ, com graduação prevista para 2026. Sou apaixonado por cibersegurança, desenvolvimento de software e sistemas Linux.<br><br>Tenho experiência prática com tecnologias imersivas, scripts para ambientes Linux e desenvolvimento de soluções seguras e escaláveis. Meu conjunto de habilidades inclui Python, Rust, C++, JavaScript e ferramentas como Unity, Git e VMware.<br><br>Atualmente, estou focado em avançar meu conhecimento em segurança da informação e construir projetos impactantes.",
     "projects": "Projetos",
     "years_of_experience": "anos de experiência",
     "contact_message": "Estou aberto a novas oportunidades e colaborações, então sinta-se à vontade para entrar em contato!",
