feat: enhance portfolio component with skill icons and update project descriptions

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -35,7 +35,7 @@
     "projects": [
       {
         "title": "Byte de Sabor",
-        "description": "Byte de Sabor is a açai store website developed using React. It features a modern and responsive design, showcasing the store’s products and services. This project demonstrates my proficiency in front-end development and my ability to create visually appealing and user-friendly websites."
+        "description": "Byte de Sabor is a açai store website developed using React. It features a modern and responsive design, showcasing the store’s products and services."
       },
       {
         "title": "Archemy",
