--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -35,7 +35,7 @@
     "projects": [
       {
         "title": "Byte de Sabor",
-        "description": "Byte de Sabor es un sitio web de tienda de açaí desarrollado con React. Cuenta con un diseño moderno y responsivo, mostrando los productos y servicios de la tienda. Este proyecto demuestra mi competencia en desarrollo front-end y mi capacidad para crear sitios web visualmente atractivos y fáciles de usar."
+        "description": "Byte de Sabor es un sitio web de tienda de açaí desarrollado con React. Cuenta con un diseño moderno y responsivo, mostrando los productos y servicios de la tienda."
       },
       {
         "title": "Archemy",
