--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -35,7 +35,7 @@
     "projects": [
       {
         "title": "Byte de Sabor",
-        "description": "Byte de Sabor é um site de loja de açaí desenvolvido usando React. Ele apresenta um design moderno e responsivo, exibindo os produtos e serviços da loja. Este projeto demonstra minha proficiência em desenvolvimento front-end e minha capacidade de criar sites visualmente atraentes e fáceis de usar."
+        "description": "Byte de Sabor é um site de loja de açaí desenvolvido usando React. Ele apresenta um design moderno e responsivo, exibindo os produtos e serviços da loja."
       },
       {
         "title": "Archemy",
