--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -3,7 +3,7 @@
     "software_engineer": "Desarrollador Fullstack",
     "cybersecurity": "Ciberseguridad",
     "greeting": "HOLA, SOY",
-    "description": "Soy un desarrollador full stack con sede en Brasil. Me apasiona crear y desarrollar aplicaciones web. También soy un entusiasta de la ciberseguridad.",
+    "description": "Soy un desarrollador full stack con sede en Brasil con pasión por Linux y ciberseguridad, y también disfruto desarrollando aplicaciones web.",
     "download_cv": "Descargar CV",
     "select_cv_language": "Seleccionar idioma",
     "brazilian_portuguese": "Portugués Brasileño",
@@ -26,7 +26,7 @@
     "title": "Habilidades",
     "frontend": "Frontend",
     "backend": "Backend",
-    "cybersecurity_infrastructure": "Ciberseguridad & Infraestructura",
+    "cybersecurity": "Ciberseguridad & Infraestructura",
     "design_creativity": "Diseño & Creatividad",
     "description": "Tengo experiencia con las siguientes tecnologías:"
   },
