fix: simplify design and cybersecurity labels in localization files

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -27,7 +27,7 @@
     "frontend": "Frontend",
     "backend": "Backend",
     "cybersecurity": "Cybersecurity",
-    "design_creativity": "Design & Creativity",
+    "design_creativity": "Design",
     "description": "I have experience with the following technologies:"
   },
   "portfolio": {
