--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -26,8 +26,8 @@
     "title": "Habilidades",
     "frontend": "Frontend",
     "backend": "Backend",
-    "cybersecurity": "Ciberseguridad & Infraestructura",
-    "design_creativity": "Diseño & Creatividad",
+    "cybersecurity": "Ciberseguridad",
+    "design_creativity": "Diseño",
     "description": "Tengo experiencia con las siguientes tecnologías:"
   },
   "portfolio": {
