--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -26,8 +26,8 @@
     "title": "Habilidades",
     "frontend": "Frontend",
     "backend": "Backend",
-    "cybersecurity": "Cibersegurança & Infraestrutura",
-    "design_creativity": "Design & Criatividade",
+    "cybersecurity": "Cibersegurança",
+    "design_creativity": "Design",
     "description": "Tenho experiência com as seguintes tecnologias:"
   },
   "portfolio": {
