--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -39,15 +39,15 @@
       },
       {
         "title": "Archemy",
-        "description": "Um script de instalação e configuração do Linux personalizado para Arch Linux. Ele suporta a instalação de pacotes via Pacman, Paru, Yay, APT, DNF ou Flatpak com detecção automática do gerenciador de pacotes. Desenvolvido usando Bash."
+        "description": "Um script de instalação e configuração do Linux personalizado para Arch Linux, com suporte a múltiplas distribuições e detecção automática de pacotes."
       },
       {
         "title": "Capture the Flag [CTF]",
-        "description": "Mergulhe na minha jornada no mundo dos desafios Capture the Flag (CTF). Este repositório é uma vitrine das minhas experiências práticas de aprendizado, apresentando desafios CTF, writeups e recursos que enfrentei para aprimorar minhas habilidades em cibersegurança. Cada desafio representa um passo à frente na minha busca para dominar a arte da cibersegurança, mostrando meu progresso e o conhecimento adquirido ao longo do caminho."
+        "description": "Um repositório com desafios CTF que enfrentei para aprimorar minhas habilidades em cibersegurança em plataformas como TryHackMe, Hack The Box, Let's Defend ou em um lab pessoal."
       },
       {
         "title": "PyBank",
-        "description": "PyBank é um projeto de sistema bancário baseado em Python que demonstra minhas habilidades no desenvolvimento de aplicações financeiras robustas. Ele apresenta gerenciamento de contas, manipulação de transações e autenticação de usuários. Este projeto demonstra minha proficiência em Python e minha capacidade de criar soluções de software confiáveis, seguras e eficientes."
+        "description": "PyBank é um projeto de sistema bancário baseado em Python que apresenta gerenciamento de contas, manipulação de transações e autenticação de usuários."
       }
     ]
   },
@@ -70,7 +70,7 @@
   "contact": {
     "title": "Sobre",
     "title_2": " Mim",
-    "description": "Olá, eu sou Paule Macedo, estudante de Ciência da Computação no CEFET-RJ, com graduação prevista para 2026. Sou apaixonado por cibersegurança, desenvolvimento de software e sistemas Linux.<br><br>Tenho experiência prática com tecnologias imersivas, scripts para ambientes Linux e desenvolvimento de soluções seguras e escaláveis. Meu conjunto de habilidades inclui Python, Rust, C++, JavaScript e ferramentas como Unity, Git e VMware.<br><br>Atualmente, estou focado em avançar meu conhecimento em segurança da informação e construir projetos impactantes.",
+    "description": "Olá, eu sou Paule Macedo, estudante de Ciência da Computação no CEFET-RJ, com graduação prevista para 2026. Sou apaixonado por cibersegurança, desenvolvimento de software e sistemas Linux.<br><br>Tenho experiência prática com tecnologias imersivas, scripts para ambientes Linux e desenvolvimento de soluções seguras e escaláveis. Meu conjunto de habilidades inclui Python, Bash, ReactJS e ferramentas como Unity, Git e VMware.<br><br>Atualmente, estou focado em avançar meu conhecimento em segurança da informação e construir projetos impactantes.",
     "projects": "Projetos",
     "years_of_experience": "anos de experiência",
     "contact_message": "Estou aberto a novas oportunidades e colaborações, então sinta-se à vontade para entrar em contato!",
