feat: update Skills component with new technologies and improve localization descriptions

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -3,7 +3,7 @@
     "software_engineer": "Desarrollador Fullstack",
     "cybersecurity": "Ciberseguridad",
     "greeting": "HOLA, SOY",
-    "description": "Soy un desarrollador full stack con sede en Brasil con pasión por Linux y ciberseguridad, y también disfruto desarrollando aplicaciones web.",
+    "description": "Soy un desarrollador full stack brasileño con pasión por Linux y ciberseguridad, y también disfruto desarrollando aplicaciones web.",
     "download_cv": "Descargar CV",
     "select_cv_language": "Seleccionar idioma",
     "brazilian_portuguese": "Portugués Brasileño",
