--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -3,7 +3,7 @@
     "software_engineer": "Desenvolvedor Fullstack",
     "cybersecurity": "Cibersegurança",
     "greeting": "OLÁ, EU SOU",
-    "description": "Sou um desenvolvedor full stack baseado no Brasil com paixão por Linux e cibersegurança, e também gosto de desenvolver aplicações web.",
+    "description": "Sou um desenvolvedor full stack Brasileiro com paixão por Linux e cibersegurança, e também gosto de desenvolver aplicações web.",
     "download_cv": "Baixar CV",
     "select_cv_language": "Selecione o idioma",
     "brazilian_portuguese": "Português Brasileiro",
